--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="React-app" content="Template react-js" />
+    <meta name="description" content="Put your description here." />
     <link rel="apple-touch-icon" href="" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -42,6 +43,27 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!--Script per creare una PWA (Progressive Web Application)-->
+    <script>
+      //controllo se il browser supporta i Service Workers
+      if ("serviceWorker" in navigator) {
+        /* load si verifica quando l'intera pagina, comprese tutte le risorse
+        esterne (come immagini e script), è stata completamente caricata */
+        window.addEventListener("load", () => {
+          //tenta di registrare il file serviceWorker.js
+          navigator.serviceWorker
+            .register("./serviceWorker.js")
+            .then((reg) => {
+              console.log("WORKER Registered");
+            })
+            .catch((err) => {
+              console.log("ERROR WORKER " + err);
+            });
+        });
+      }
+    </script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
